add lazer machine, still work to do, and prepare for jdk 13