@@ -3,14 +3,14 @@ package org.barrelorgandiscovery.model.type;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.Serializable;
+import java.util.Base64;
+import java.util.Base64.Decoder;
+import java.util.Base64.Encoder;
 
 import org.barrelorgandiscovery.messages.Messages;
 import org.barrelorgandiscovery.model.ModelType;
 import org.barrelorgandiscovery.scale.Scale;
 import org.barrelorgandiscovery.scale.io.ScaleIO;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 /**
  * Scale of a specific organ Permit to parametrize a scale for a given organ or
@@ -28,10 +28,9 @@ public class ScaleType implements ModelType, Serializable {
 	public ScaleType(String serializedForm) throws Exception {
 
 		// read the Scale
-		BASE64Decoder base64Decoder = new BASE64Decoder();
+		Decoder base64Decoder = Base64.getDecoder();
 
-		scale = ScaleIO.readGamme(new ByteArrayInputStream(base64Decoder
-				.decodeBuffer(serializedForm)));
+		scale = ScaleIO.readGamme(new ByteArrayInputStream(base64Decoder.decode(serializedForm.getBytes())));
 
 	}
 
@@ -40,9 +39,10 @@ public class ScaleType implements ModelType, Serializable {
 		ByteArrayOutputStream baos = new ByteArrayOutputStream();
 		ScaleIO.writeGamme(scale, baos);
 
-		BASE64Encoder base64Encoder = new BASE64Encoder();
+		Encoder base64Encoder = Base64.getEncoder();
+		// BASE64Encoder base64Encoder = new BASE64Encoder();
 
-		return base64Encoder.encode(baos.toByteArray());
+		return new String(base64Encoder.encode(baos.toByteArray()));
 	}
 
 	public ScaleType(Scale scale) {
@@ -84,12 +84,11 @@ public class ScaleType implements ModelType, Serializable {
 	public String getName() {
 		return scale.getName();
 	}
-	
+
 	@Override
 	public String getLabel() {
 		String key = getName();
 		return Messages.getString(key);
 	}
-	
 
 }
